Bug#37781 mysql_drop_user calls get_current_user() twice for no reason

Fixed typo and removed duplicate call to get_current_user.